--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,9 @@
 [buildout]
 parts =
+    apacheconf
     ctags
     django
+    mkdir
     omelette
     production
     sphinx
@@ -12,6 +14,7 @@ eggs =
     django-annoying
     django-debug-toolbar
     django-extensions
+    django-staticfiles
     ipdb
     ipython
 
@@ -35,7 +38,19 @@ settings = production
 eggs = ${buildout:eggs}
 extra-paths = ${django:extra-paths}
 wsgi = true
-wsgilog = ${buildout:directory}/logs/wsgi.log
+wsgilog = ${buildout:directory}/var/log/wsgi.log
+
+[mkdir]
+recipe = z3c.recipe.mkdir
+paths =
+    ${buildout:directory}/var/htdocs/static
+    ${buildout:directory}/var/htdocs/media
+    ${buildout:directory}/var/log
+
+[apacheconf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/apache.conf.in
+output = ${buildout:directory}/etc/apache.conf
 
 [ctags]
 recipe = z3c.recipe.tag:tags
@@ -51,4 +66,3 @@ recipe = zc.recipe.egg
 eggs = Sphinx
 scripts =
     sphinx-build
-    sphinx-quickstart
