Fixes for autodoc

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -43,7 +43,6 @@ wsgilog = ${buildout:directory}/var/log/wsgi.log
 [mkdir]
 recipe = z3c.recipe.mkdir
 paths =
-    ${buildout:directory}/var/htdocs/static
     ${buildout:directory}/var/htdocs/media
     ${buildout:directory}/var/log
 
@@ -63,6 +62,10 @@ eggs = ${buildout:eggs}
 
 [sphinx]
 recipe = zc.recipe.egg
-eggs = Sphinx
+eggs =
+    ${buildout:eggs}
+    Sphinx
+extra-paths =
+    ${buildout:extra-paths}
 scripts =
     sphinx-build
