--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,9 @@ parts =
 eggs =
     PIL
     South
+    coverage
     django-annoying
+    django-coverage
     django-debug-toolbar
     django-extensions
     django-staticfiles
@@ -24,7 +26,7 @@ extra-paths =
 
 [django]
 recipe = djangorecipe
-version = 1.2
+version = 1.2.3
 project = project
 settings = development
 eggs = ${buildout:eggs}
