Fixed ambigous static/media dirs. I think STATIC_ROOT should be same as MEDIA_ROOT. Separation of static and media does not work with django 1.2 because many applications use MEDIA_URL to incude scripts, styles, etc.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,7 +45,7 @@ wsgilog = ${buildout:directory}/var/log/wsgi.log
 [mkdir]
 recipe = z3c.recipe.mkdir
 paths =
-    ${buildout:directory}/var/htdocs/media
+    ${buildout:directory}/var/htdocs/static
     ${buildout:directory}/var/log
 
 [apacheconf]
