--- a/.hgignore
+++ b/.hgignore
@@ -4,15 +4,16 @@ syntax:glob
 *.mo
 *.pyc
 .installed.cfg
+.mr.developer.cfg
 .twill-history
 bin
 bootstrap.py
+build
 develop-eggs
+dist
 docs/build
 etc/apache.conf
 parts
 project/production.py
 tags
 var
-dist
-build
