--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,19 @@ extra-paths =
     ${buildout:directory}
     ${django:location}
 
+extensions = mr.developer
+sources = sources
+sources-dir = apps
+auto-checkout = *
+
+versions = versions
+
+[sources]
+# my.package = svn http://example.com/svn/my.package/trunk
+# some.other.package = git git://example.com/git/some.other.package.git
+
+[versions]
+
 [django]
 recipe = djangorecipe
 version = 1.2.3
