Separated development from depleyment. Fixed apache config.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,28 +1,18 @@
 [buildout]
 parts =
     apacheconf
-    ctags
-    django
+    production.py
+    my.cnf
     mkdir
-    omelette
-    production
-    sphinx
+    django
 
 eggs =
     PIL
     South
-    coverage
     django-annoying
-    django-coverage
-    django-debug-toolbar
-    django-extensions
     django-staticfiles
-    ipdb
-    ipython
 
 extra-paths =
-    ${buildout:directory}
-    ${django:location}
 
 extensions = mr.developer
 sources = sources
@@ -30,6 +20,9 @@ sources-dir = apps
 auto-checkout = *
 
 versions = versions
+
+servername = www.myproject.com
+serveradmin = admin@myproject.com
 
 [sources]
 # my.package = svn http://example.com/svn/my.package/trunk
@@ -41,17 +34,9 @@ versions = versions
 recipe = djangorecipe
 version = 1.2.3
 project = project
-settings = development
-eggs = ${buildout:eggs}
-extra-paths = 
-
-[production]
-recipe = djangorecipe
-version = ${django:version}
-project = ${django:project}
 settings = production
 eggs = ${buildout:eggs}
-extra-paths = ${django:extra-paths}
+extra-paths = ${buildout:extra-paths}
 wsgi = true
 wsgilog = ${buildout:directory}/var/log/wsgi.log
 
@@ -66,21 +51,13 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/etc/apache.conf.in
 output = ${buildout:directory}/etc/apache.conf
 
-[ctags]
-recipe = z3c.recipe.tag:tags
-eggs = ${buildout:eggs}
-extra-paths = ${buildout:extra-paths}
+[production.py]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/production.py.in
+output = ${buildout:directory}/etc/production.py
 
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${buildout:eggs}
+[my.cnf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/my.cnf.in
+output = ${buildout:directory}/etc/my.cnf
 
-[sphinx]
-recipe = zc.recipe.egg
-eggs =
-    ${buildout:eggs}
-    Sphinx
-extra-paths =
-    ${buildout:extra-paths}
-scripts =
-    sphinx-build
