--- a/etc/apache.conf.in
+++ b/etc/apache.conf.in
@@ -1,7 +1,6 @@
 <VirtualHost *:80>
-    ServerName www.example.com
-    ServerAlias example.com
-    ServerAdmin webmaster@example.com
+    ServerName ${buildout:servername}
+    ServerAdmin ${buildout:serveradmin}
 
     DocumentRoot ${buildout:directory}/var/htdocs/
     <Directory ${buildout:directory}/var/htdocs/>
@@ -9,19 +8,23 @@
         Allow from all
     </Directory>
 
-	WSGIScriptAlias / ${buildout:directory}/bin/production.wsgi
-	WSGIDaemonProcess djangoproject user=www-data group=www-data processes=1 threads=1
-	WSGIProcessGroup djangoproject
+    WSGIDaemonProcess djangoproject processes=1 threads=1
+    WSGIProcessGroup djangoproject
+
+    WSGIScriptAlias / ${buildout:directory}/bin/production.wsgi
+
+    <Directory ${buildout:directory}/bin/>
+        Order allow,deny
+        Allow from all
+    </Directory>
+
+    Alias /media/ ${buildout:directory}/var/htdocs/media/
+    Alias /static/ ${buildout:directory}/var/htdocs/static/
 
     <Location "/static">
         ExpiresActive On
         ExpiresDefault "access plus 1 hour"
-		SetHandler None
     </Location>
-
-    <Location "/media">
-		Sethandler None
-	</Location>
 
     LogLevel warn
     ErrorLog ${buildout:directory}/var/log/apache-error.log
