--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,6 @@ eggs =
     PIL
     South
     django-annoying
-    django-staticfiles
 
 extra-paths =
 
@@ -27,12 +26,13 @@ serveradmin = admin@myproject.com
 [sources]
 # my.package = svn http://example.com/svn/my.package/trunk
 # some.other.package = git git://example.com/git/some.other.package.git
+# bzr.package = bzr bzr+ssh://bazaar.launchpad.net/~user/project/branch/
 
 [versions]
 
 [django]
 recipe = djangorecipe
-version = 1.2.3
+version = 1.3-beta-1
 project = project
 settings = production
 eggs = ${buildout:eggs}
