- Buggy django-coverage is no longer used. Coverage is used instaed. - Other repositories are moved to parts and separated from apps.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,9 +13,14 @@ eggs =
 
 extra-paths =
 
+allowed-eggs-from-site-packages =
+    PIL
+    setuptools
+    distribute
+
 extensions = mr.developer
 sources = sources
-sources-dir = apps
+sources-dir = parts
 auto-checkout = *
 
 versions = versions
