--- a/development.cfg
+++ b/development.cfg
@@ -7,10 +7,10 @@ parts +=
     flake8
     omelette
     sphinx
+    scripts
 
 eggs +=
     coverage
-    django-coverage
     django-debug-toolbar
     django-extensions
     django-test-utils
@@ -47,3 +47,8 @@ recipe = zc.recipe.egg
 eggs = flake8
 entry-points =
     flake8=flake8:main
+
+[scripts]
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+interpreter = python
