--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,7 +37,7 @@ serveradmin = admin@myproject.com
 
 [django]
 recipe = djangorecipe
-version = 1.3-beta-1
+version = 1.3
 project = project
 settings = production
 eggs = ${buildout:eggs}
