--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,10 +34,10 @@ serveradmin = admin@myproject.com
 # bzr.package = bzr bzr+ssh://bazaar.launchpad.net/~user/project/branch/
 
 [versions]
+django = 1.3
 
 [django]
 recipe = djangorecipe
-version = 1.3
 project = project
 settings = production
 eggs = ${buildout:eggs}
