pydev environment generation recipe

--- a/development.cfg
+++ b/development.cfg
@@ -8,6 +8,7 @@ parts +=
     omelette
     sphinx
     scripts
+    pydev
 
 eggs +=
     coverage
@@ -52,3 +53,8 @@ entry-points =
 recipe = zc.recipe.egg
 eggs = ${buildout:eggs}
 interpreter = python
+
+[pydev]
+recipe = pb.recipes.pydev
+eggs = ${buildout:eggs}
+
