--- a/.hgignore
+++ b/.hgignore
@@ -1,28 +1,21 @@
 syntax:glob
 
-*.egg-info
-*.mo
+project/settings.py
+project/urls.py
+
 *.pyc
-.DS_Store
-.Thumbs.db
-.coverage
+.conf_check_*
 .installed.cfg
+.lock-wafbuild
 .mr.developer.cfg
-.twill-history
-.pydevproject
-.project
+.sass-cache
+.waf*
 bin
-bootstrap.py
-build
-develop-eggs
-dist
+buildout.cfg
+c4che
+config.log
 docs/build
-downloads
-eggs
-etc/apache.conf
-etc/my.cnf
-etc/production.py
+env
+initial_data.json
 parts
-project/production.py
-tags
 var
