--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,30 @@
+# DO NOT MODIFY! This file is generated from /home/sirex/devel/ubuntu-lt-django-lightweight/config/buildout.cfg template.
 [buildout]
 parts =
-    apacheconf
-    production.py
-    my.cnf
     mkdir
     django
+    rubygems
+    jquery
+    modernizr
+    ctags
+    scripts
 
 eggs =
     PIL
     South
     django
-    django-annoying
+    django-mediagenerator
+    sorl-thumbnail
+    Markdown
+    reportlab
+    html5lib
+    pisa
+    coverage
+    django-debug-toolbar
+    django-extensions
+    django-test-utils
+    ipdb
+    ipython
 
 extra-paths =
 
@@ -23,11 +37,9 @@ extensions = mr.developer
 sources = sources
 sources-dir = parts
 auto-checkout = *
+#always-checkout = force
 
 versions = versions
-
-servername = www.myproject.com
-serveradmin = admin@myproject.com
 
 [sources]
 # my.package = svn http://example.com/svn/my.package/trunk
@@ -35,35 +47,51 @@ serveradmin = admin@myproject.com
 # bzr.package = bzr bzr+ssh://bazaar.launchpad.net/~user/project/branch/
 
 [versions]
-django = 1.3.1
+django = 1.3
 
 [django]
 recipe = djangorecipe
 project = project
-settings = production
+settings = settings
 eggs = ${buildout:eggs}
-extra-paths = ${buildout:extra-paths}
-wsgi = true
-wsgilog = ${buildout:directory}/var/log/wsgi.log
+wsgi = false
 
 [mkdir]
 recipe = z3c.recipe.mkdir
 paths =
-    ${buildout:directory}/var/htdocs/static
+    ${buildout:directory}/var/etc
     ${buildout:directory}/var/log
+    ${buildout:directory}/var/sass/css
+    ${buildout:directory}/var/www/media
+    ${buildout:directory}/var/www/static
 
-[apacheconf]
-recipe = collective.recipe.template
-input = ${buildout:directory}/etc/apache.conf.in
-output = ${buildout:directory}/etc/apache.conf
+[rubygems]
+recipe = rubygemsrecipe
+gems =
+    sass
+    compass
+    rb-inotify
 
-[production.py]
-recipe = collective.recipe.template
-input = ${buildout:directory}/etc/production.py.in
-output = ${buildout:directory}/etc/production.py
+[jquery]
+recipe = hexagonit.recipe.download
+url = http://code.jquery.com/jquery-1.7.js
+destination = ${buildout:parts-directory}/jquery/js
+filename = jquery.js
+download-only = true
 
-[my.cnf]
-recipe = collective.recipe.template
-input = ${buildout:directory}/etc/my.cnf.in
-output = ${buildout:directory}/etc/my.cnf
+[modernizr]
+recipe = hexagonit.recipe.download
+url = http://www.modernizr.com/downloads/modernizr.js
+destination = ${buildout:parts-directory}/modernizr/js
+filename = modernizr.js
+download-only = true
 
+[ctags]
+recipe = z3c.recipe.tag:tags
+eggs = ${buildout:eggs}
+extra-paths = ${buildout:extra-paths}
+
+[scripts]
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+interpreter = python
