Changed cheetahVarStartToken in conf/apache.conf template.

--- a/config/apache.conf
+++ b/config/apache.conf
@@ -1,37 +1,40 @@
 # $NOTE
+#compiler-settings
+cheetahVarStartToken = @
+#end compiler-settings
 <VirtualHost *:80>
-    ServerName $SERVER_NAME
-    ServerAdmin $SERVER_ADMIN
+    ServerName @SERVER_NAME
+    ServerAdmin @SERVER_ADMIN
 
-    DocumentRoot $TOP/var/www/
-    <Directory $TOP/var/www/>
+    DocumentRoot @TOP/var/www/
+    <Directory @TOP/var/www/>
         Order allow,deny
         Allow from all
     </Directory>
 
-    WSGIDaemonProcess $SERVER_NAME #slurp
-#if $WSGI_USER
-user=$WSGI_USER #slurp
+    WSGIDaemonProcess @SERVER_NAME #slurp
+#if @WSGI_USER
+user=@WSGI_USER #slurp
 #end if
-#if $WSGI_GROUP
-group=$WSGI_GROUP #slurp
+#if @WSGI_GROUP
+group=@WSGI_GROUP #slurp
 #end if
 processes=1 threads=1
-    WSGIProcessGroup $SERVER_NAME
+    WSGIProcessGroup @SERVER_NAME
 
-    WSGIScriptAlias / $TOP/bin/django.wsgi
+    WSGIScriptAlias / @TOP/bin/django.wsgi
 
-    <Directory $TOP/bin/>
+    <Directory @TOP/bin/>
         Order allow,deny
         Allow from all
     </Directory>
 
-    Alias /media/ $TOP/var/www/media/
-    Alias /static/ $TOP/var/www/static/
+    Alias /media/ @TOP/var/www/media/
+    Alias /static/ @TOP/var/www/static/
 
     LogLevel warn
-    ErrorLog $TOP/var/log/apache-error.log
-    CustomLog $TOP/var/log/apache-access.log combined
+    ErrorLog @TOP/var/log/apache-error.log
+    CustomLog @TOP/var/log/apache-access.log combined
 
 
     # ======================================================================
