Django staticfiles are back, and works togethe with mediagenerator. Also added some minor imprevements and fixes.
--HG--
rename : project/static/css/ie.sass => project/mediagenerator/css/ie.sass
rename : project/static/css/print.sass => project/mediagenerator/css/print.sass
rename : project/static/css/screen.sass => project/mediagenerator/css/screen.sass
rename : project/static/js/plugins.js => project/mediagenerator/js/plugins.js
rename : project/static/js/scripts.js => project/mediagenerator/js/scripts.js

--- a/.hgignore
+++ b/.hgignore
@@ -1,24 +1,30 @@
 syntax:glob
 
-project/settings.py
-project/urls.py
-
+*.egg-info
+*.mo
 *.pyc
+*.swp
 .conf_check_*
 .installed.cfg
 .lock-wafbuild
 .mr.developer.cfg
 .sass-cache
 .waf*
-bin
-c4che
 config.log
-docs/build
-env
-parts
-var
 
 syntax:regexp
+
+^project/settings.py$
+^project/urls.py$
+
+^bin$
 ^buildout.cfg$
-^initial_data.json$
+^c4che$
 ^configure$
+^docs/build$
+^downloads$
+^eggs$
+^env$
+^initial_data.json$
+^parts$
+^var$
