--- a/config/buildout.cfg
+++ b/config/buildout.cfg
@@ -4,6 +4,7 @@ cheetahVarStartToken = @
 #end compiler-settings
 [buildout]
 parts =
+    pil
     mkdir
     rubygems
     django
@@ -54,6 +55,9 @@ versions = versions
 
 [versions]
 django = 1.3
+#if @DEVELOPMENT
+ipython = 0.10
+#end if
 
 [django]
 recipe = djangorecipe
@@ -67,6 +71,11 @@ wsgi = true
 wsgilog = ${buildout:directory}/var/log/wsgi.log
 #end if
 
+[pil]
+recipe = zc.recipe.egg:custom
+egg = PIL
+library-dirs = /usr/lib/i386-linux-gnu
+
 [mkdir]
 recipe = z3c.recipe.mkdir
 paths =
@@ -75,6 +84,7 @@ paths =
     ${buildout:directory}/var/sass/css
     ${buildout:directory}/var/www/media
     ${buildout:directory}/var/www/static
+    ${buildout:directory}/var/mediagenerator
 
 [rubygems]
 recipe = rubygemsrecipe
