Fixing mediagenerator configureation bugs in productions environment.

--- a/config/buildout.cfg
+++ b/config/buildout.cfg
@@ -34,6 +34,10 @@ eggs =
     #end if
 
 extra-paths =
+    @PROJECT_NAME
+    #if @PRODUCTION
+    var/mediagenerator
+    #end if
 
 allowed-eggs-from-site-packages =
     PIL
@@ -64,6 +68,7 @@ recipe = djangorecipe
 project = @PROJECT_NAME
 settings = settings
 eggs = ${buildout:eggs}
+extra-paths = ${buildout:extra-paths}
 #if @DEVELOPMENT
 wsgi = false
 #else
