Fixing apache.conf configuration bugs.

--- a/config/apache.conf
+++ b/config/apache.conf
@@ -148,12 +148,6 @@ processes=1 threads=1
     AddType text/x-vcard                   vcf
 
 
-    # ----------------------------------------------------------------------
-    # Gzip compression
-    # ----------------------------------------------------------------------
-
-    <IfModule mod_deflate.c>
-
     # Force deflate for mangled headers
     # developer.yahoo.com/blogs/ydn/posts/2010/12/pushing-beyond-gzipping/
     <IfModule mod_setenvif.c>
@@ -291,11 +285,11 @@ processes=1 threads=1
     # Option 1:
     # Rewrite "www.example.com -> example.com" 
 
-    <IfModule mod_rewrite.c>
-      RewriteCond %{HTTPS} !=on
-      RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-      RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
-    </IfModule>
+    # <IfModule mod_rewrite.c>
+    #   RewriteCond %{HTTPS} !=on
+    #   RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    #   RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
+    # </IfModule>
 
     # ----------------------------------------------------------------------
 
@@ -325,13 +319,6 @@ processes=1 threads=1
     # ----------------------------------------------------------------------
     # A little more security
     # ----------------------------------------------------------------------
-
-
-    # Do we want to advertise the exact version number of Apache we're running?
-    # Probably not.
-    ## This can only be enabled if used in httpd.conf - It will not work in
-    ## .htaccess
-    ServerTokens Prod
 
 
     # "-Indexes" will have Apache block users from browsing folders without a
