--- a/config/buildout.cfg
+++ b/config/buildout.cfg
@@ -59,6 +59,7 @@ versions = versions
 
 [versions]
 django = 1.3
+rubygemsrecipe = 0.1.3
 #if @DEVELOPMENT
 ipython = 0.10
 #end if
@@ -93,6 +94,7 @@ paths =
 
 [rubygems]
 recipe = rubygemsrecipe
+version = 1.8.12
 gems =
     sass
     compass
