Better deployment support using Apache and MySQL.

--- a/config/apache.conf
+++ b/config/apache.conf
@@ -29,6 +29,15 @@ processes=1 threads=1
         Allow from all
     </Directory>
 
+    #if @USE_HTPASSWD
+    <Location />
+      AuthType Basic
+      AuthName "@SERVER_NAME"
+      AuthUserFile @TOP/var/etc/htpasswd
+      Require valid-user 
+    </Location>
+    #end if
+
     Alias /media/ @TOP/var/www/media/
     Alias /static/ @TOP/var/www/static/
 
