--- a/config/buildout.cfg
+++ b/config/buildout.cfg
@@ -45,7 +45,10 @@ allowed-eggs-from-site-packages =
     setuptools
     distribute
 
-extensions = mr.developer
+extensions =
+    mr.developer
+    buildout-versions
+
 sources = sources
 sources-dir = parts
 auto-checkout = *
@@ -92,10 +95,10 @@ paths =
     ${buildout:directory}/var/www/media
     ${buildout:directory}/var/www/static
     ${buildout:directory}/var/mediagenerator
+    ${buildout:directory}/var/cache
 
 [rubygems]
 recipe = rubygemsrecipe
-version = 1.8.12
 gems =
     sass
     compass
